Hybris-friendly defconfig
Change-Id: I118f2725e01a37680ca628511b931fbd7f5cd526

--- a/arch/arm64/configs/floral_defconfig
+++ b/arch/arm64/configs/floral_defconfig
@@ -1,5 +1,36 @@
 CONFIG_KERNEL_LZ4=y
-# CONFIG_FHANDLE is not set
+CONFIG_FHANDLE=y
+CONFIG_SYSVIPC=y
+CONFIG_WATCHDOG_NOWAYOUT=y
+CONFIG_ANDROID_LOW_MEMORY_KILLER=y
+CONFIG_IPC_NS=y
+CONFIG_SECURITY_YAMA=y
+CONFIG_IP6_NF_MATCH_AH=m
+CONFIG_NETFILTER_XT_MATCH_SCTP=m
+CONFIG_SECURITY_SELINUX_BOOTPARAM=y
+CONFIG_CUSE=y
+CONFIG_NETFILTER_XT_MATCH_DCCP=m
+CONFIG_NETFILTER_XT_MATCH_NFACCT=m
+CONFIG_FANOTIFY=y
+CONFIG_IP6_NF_MATCH_MH=m
+CONFIG_CGROUP_PERF=y
+CONFIG_CHECKPOINT_RESTORE=y
+CONFIG_AUTOFS4_FS=m
+CONFIG_MEMCG_KMEM=y
+CONFIG_BT_RFCOMM=y
+CONFIG_HIDRAW=y
+CONFIG_CGROUP_DEVICE=y
+CONFIG_CGROUP_NET_PRIO=y
+CONFIG_NF_NAT_IPV6=m
+CONFIG_BT_HCIUART=y
+CONFIG_BT_HCIUART_H4=y
+CONFIG_NETFILTER_XT_MATCH_RECENT=m
+CONFIG_BTRFS_FS=y
+CONFIG_DEVTMPFS=y
+CONFIG_DEVTMPFS_MOUNT=y
+CONFIG_NLS_UTF8=y
+CONFIG_NET_CLS_CGROUP=y
+CONFIG_IP6_NF_MATCH_FRAG=m
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
 CONFIG_NO_HZ=y
@@ -26,7 +57,7 @@ CONFIG_CPUSETS=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_BPF=y
 CONFIG_NAMESPACES=y
-# CONFIG_PID_NS is not set
+CONFIG_PID_NS=y
 CONFIG_SCHED_TUNE=y
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 CONFIG_BLK_DEV_INITRD=y
@@ -264,6 +295,7 @@ CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_RFKILL=y
 CONFIG_NFC_ST21NFC=y
 CONFIG_ESE_ST54J=y
+CONFIG_FW_LOADER_USER_HELPER=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
 CONFIG_REGMAP_ALLOW_WRITE_DEBUGFS=y
 CONFIG_DMA_CMA=y
@@ -314,7 +346,7 @@ CONFIG_DM_VERITY=y
 CONFIG_DM_VERITY_FEC=y
 CONFIG_NETDEVICES=y
 CONFIG_BONDING=y
-CONFIG_DUMMY=y
+CONFIG_DUMMY=n
 CONFIG_TUN=y
 CONFIG_VETH=y
 CONFIG_RMNET=y
